Fix PDF spacing

--- a/docs/cheatsheet/cheatsheet.css
+++ b/docs/cheatsheet/cheatsheet.css
@@ -116,7 +116,7 @@ ul > li > ul > li {
   border: none;
   box-shadow: none;
   font-weight: normal;
-  padding: 0.3em 0 0 0;
+  padding: 0.2em 0 0 0;
   margin: 0;
   flex-basis: 100%;
   font-family: 'Droid Sans Mono' !important;
